<package>
  <name>segway_rmp</name>
  <version>0.1.2</version>
  <description>segway_rmp</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/segway_rmp</url>
  <url type="repository">https://github.com/segwayrmp/segway-rmp-ros-pkg</url>
  <url type="bugtracker">https://github.com/segwayrmp/segway-rmp-ros-pkg/issues</url>

  <maintainer email="wjwwood@gmail.com">William Woodall</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <author>William Woodall</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>libsegwayrmp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>libsegwayrmp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
